# 4K4D

./: .gitignore  README.md  environment.yml  license  pyproject.toml  pyrightconfig.json  readme.md  requirements-dev.txt  requirements-devel.txt  requirements.txt  setup.cfg
assets/: .gitignore
assets/meshes/: bunny.npz  bunny.ply
configs/: base.yaml
configs/models/: dnerf.yaml  enerf.yaml  enerfi.yaml  gaussiant.yaml  kplanes.yaml  l3mhet-norm.yaml  l3mhet.yaml  mhet.yaml  nerft-norm.yaml  nerft.yaml  neuralangelo.yaml  neus-facto.yaml  neus-smt.yaml  ngpt.yaml  point_planes.yaml  r4dv.yaml  r4dvb.yaml  volsdf-facto.yaml
configs/specs/: 100.yaml  a0.yaml  a5.yaml  abl.yaml  bf16.yaml  black.yaml  blurry.yaml  boost.yaml  cache_raw.yaml  chunky.yaml  colmap.yaml  compact.yaml  cubic.yaml  demo.yaml  depth.yaml  dry_run.yaml  enerff.yaml  eval.yaml  f0.yaml  fp16.yaml  fp32.yaml  fusion.yaml  geometry.yaml  gui.yaml  hash1.yaml  hash10.yaml  hash3.yaml  hash5.yaml  ibr.yaml  jpg.yaml  legacy.yaml  mask.yaml  middle.yaml  mobile.yaml  none.yaml  normal.yaml  novhulls.yaml  optcam.yaml  optimized.yaml  orbit.yaml  (+31 more)
docs/design/: camera.md  config.md  dataset.md  install.md  logging.md  main.md  model.md  runner.md  viewer.md  websocket.md
docs/misc/: cuda_opengl.md  cuda_pytorch.md  custom_dataset.md  how_to_contribute.md  memory.md  segmentation.md  static.md  tricks.md
docs/projects/: enerf.md
easyvolcap/: __init__.py
easyvolcap/dataloaders/: __init__.py  datasamplers.py  volumetric_video_dataloader.py
easyvolcap/engine/: __init__.py  config.py  file_client.py  io.py  misc.py  path.py  registry.py
easyvolcap/models/: __init__.py  noop_model.py  volumetric_video_model.py
easyvolcap/runners/: __init__.py  moderators.py  optimizers.py  recorders.py  schedulers.py  volumetric_video_runner.py  volumetric_video_viewer.py  websocket_server.py
easyvolcap/scripts/: client.py  main.py  wrap.py
easyvolcap/utils/: __init__.py  base_utils.py  blend_utils.py  blender_utils.py  bound_utils.py  cam_utils.py  chunk_utils.py  colmap_utils.py  color_utils.py  console_utils.py  cuda_utils.py  data_utils.py  depth_utils.py  dino_utils.py  dist_utils.py  easy_utils.py  (+44 more)
tests/: bvh_vs_pytorch3d_knn_tests.py  cuda_illegal_memory_access_tests.py  cuda_illegal_memory_render_tests.py  cupy_knn_vs_pytorch3d_tests.py  cupy_opengl_interop_tests.py  fair_patch_sample_tests.py  hardware_splatting_tests.py  headless_opengl_tests.py  in_frustrum_culling_tests.py  mipnerf360_tests.py  online_param_update_tests.py  pulsar_points_rendering_tests.py  pycuda_opengl_interop_tests.py  zmp_async_tests.py
(+672 files in other folders)
